# face-tracking-rs

./: .gitignore  Cargo.toml  Dockerfile  NOTICE.md  README.md  compose.yaml  rust-toolchain.toml
.devcontainer/: devcontainer.json
benches/: blaze_face_benches.rs
examples/: convert_pth_to_safetensors.rs  detect_1face.rs  detect_1face_back.rs  detect_3faces.rs  detect_3faces_back.rs  detect_4faces.rs  detect_4faces_back.rs  detect_samples.rs  utilities.rs
src/: blaze_face.rs  lib.rs  main.rs
src/blaze_face/: blaze_block.rs  blaze_face.rs  blaze_face_back_model.rs  blaze_face_config.rs  blaze_face_front_model.rs  blazeface.pth  conv2d_parameters.rs  face_detection.rs  final_blaze_block.rs  non_max_suppression.rs
