[package]
name = "face-tracking-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
readme = "README.md"

[lib]
name = "face_tracking_rs"
path = "src/lib.rs"

[[bench]]
name = "blaze_face_benches"
harness = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", features = [
    "cuda",
    "cudnn",
    #"mkl",
    #"accelerate",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", features = [
    "cuda",
    #"mkl",
    #"accelerate",
] }
half = "2.3.1"

[dev-dependencies]
anyhow = "1.0.75"
criterion = "0.5.1"
image = "0.24.7"
imageproc = "0.23.0"
